<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable name="model" type="net.sarangnamu.ehanex.viewmodels.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#ff414141">

        <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintHorizontal_bias="0.1"
                app:layout_constraintVertical_bias="0.1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:src="@drawable/ic_android_white_24dp"
                android:contentDescription="TODO"/>

        <TextView
                android:id="@+id/login_text"
                android:text="@string/login_pls_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@+id/logo"
                app:layout_constraintTop_toBottomOf="@+id/logo"
                android:hint="@string/login_user_id"
                android:layout_marginTop="10dp"
                />

        <EditText
                android:id="@+id/user_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                app:layout_constraintStart_toStartOf="@+id/logo"
                app:layout_constraintTop_toBottomOf="@+id/login_text"
                app:layout_constraintEnd_toStartOf="@+id/login_button"
                android:text="@={model.userid}"
        />
        <EditText
                android:id="@+id/user_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:hint="@string/login_user_password"
                app:layout_constraintStart_toStartOf="@+id/logo"
                app:layout_constraintTop_toBottomOf="@+id/user_id"
                app:layout_constraintEnd_toStartOf="@+id/login_button"
                android:text="@={model.userpw}"
        />
        <Button
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@mipmap/ic_launcher"
                app:layout_constraintHorizontal_bias="0.9"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/user_id"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/login_login"
                app:layout_constraintBottom_toBottomOf="@+id/user_password"
                android:onClick="@{() -> model.login()}"
        />

        <CheckBox
                android:id="@+id/remember_userid"
                android:text="@string/login_remember_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@+id/logo"
                app:layout_constraintTop_toBottomOf="@+id/user_password"
                android:checked="@={model.rememberId}"
        />

        <CheckBox
                android:id="@+id/remember_password"
                android:text="@string/login_remember_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/remember_userid"
                app:layout_constraintTop_toBottomOf="@+id/user_password"
                android:checked="@={model.rememberPw}"
        />

        <Button
                android:id="@+id/find_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/find_password"
                app:layout_constraintTop_toBottomOf="@+id/remember_userid"
                android:text="@string/login_find_id"
                app:layout_constraintWidth_percent=".4"
                android:onClick="@{() -> model.findUserName()}"
        />

        <Button
                android:id="@+id/find_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/remember_userid"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/find_id"
                android:text="@string/login_find_password"
                app:layout_constraintWidth_percent=".4"
                android:onClick="@{() -> model.findUserPassword()}"
        />

        <Button
                android:id="@+id/join_member"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/find_id"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/login_join_member"
                app:layout_constraintWidth_percent=".87"
                android:onClick="@{() -> model.joinMember()}"
        />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
