<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable name="model" type="net.sarangnamu.ehanex.viewmodels.MemberViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/member"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#ff414141">

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/member_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:background="@color/colorPrimary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.viewpager.widget.ViewPager
                android:id="@+id/member_viewpager"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/member_toolbar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:bindPagerAdapter="@{model.adapter}">

            <com.google.android.material.tabs.TabLayout
                    android:id="@+id/member_tabs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <com.google.android.material.tabs.TabItem
                        android:text="@string/member_people"
                        android:layout_height="wrap_content" android:layout_width="wrap_content"/>
                <com.google.android.material.tabs.TabItem
                        android:text="@string/member_corporate"
                        android:layout_height="wrap_content" android:layout_width="wrap_content"/>
                <com.google.android.material.tabs.TabItem
                        android:text="@string/member_other"
                        android:layout_height="wrap_content" android:layout_width="wrap_content"/>

            </com.google.android.material.tabs.TabLayout>

        </androidx.viewpager.widget.ViewPager>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
